Fixes titlebar text alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -263,7 +263,6 @@ h3, .h3 {
 .titlebar {
   display: grid;
   grid-template-columns: 1fr auto 1fr ;
-  text-align: right;
   margin-bottom: 2rem;
   @media only screen and (min-width: 80em) {
     text-align: left;
